SERVER-59459 With glibc-2.34, MINSIGSTKSZ is no longer a constant

(cherry picked from commit ef08d0dbc99db8c4620512e92bfb3154282eb5d3)